# gpu-job-service

./: .env.example  .gitignore  API_CONTRACT.md  Dockerfile.gateway  Dockerfile.worker  README.md  database.py  docker-compose.yml  gateway.py  k8s_ops.py  logs.py  main.py  models.py  requirements-gateway.txt  requirements-worker.txt  requirements.txt  schemas.py  ship_logs.py  upload_outputs.py  worker.py
api/: db.py  models.py  requirements.txt  state_machine.py
api/tests/: test_state_machine.py
cli/: .gitignore  README.md  pyproject.toml
cli/examples/: job.yaml  requirements.txt  train.py
cli/examples/kaniko-test/: job.yaml  train.py  utils.py
cli/src/gpujob_cli/: api_client.py  cli.py  config.py  constants.py  job_config.py
cli/tests/: mock_server.py  test_api_client.py  test_cli.py  test_integration.py  test_job_config.py  test_list_cancel.py  test_logs.py
docs/: CONTRACT_list_cancel_logs.md
k8s/: worker-deployment.yaml
migrations/: 00001_create_jobs.sql  00001_setup_initial_schema.sql  00002_widen_failure_reason.sql  00003_add_logs_column.sql  00004_add_build_columns.sql
