[project]
name = "gpujob-cli"
version = "0.1.0"
description = "CLI for submitting and tracking GPU jobs against the gpu-job-service API"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.scripts]
gpujob = "gpujob_cli.cli:app"

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "fastapi>=0.110",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
